# prereview

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.codex/skills/: prereview-pipeline
skills/prereview-pipeline/: SKILL.md
skills/prereview-pipeline/agents/: openai.yaml
skills/prereview-pipeline/assets/: annotations.template.json
skills/prereview-pipeline/references/: annotation-schema.md
src/prereview/: __init__.py  __main__.py  annotations.py  cli.py  diff_parser.py  draft.py  models.py  prepare.py  renderer.py  review_io.py  skill_install.py  util.py  validate.py
src/prereview/skill_assets/: __init__.py
src/prereview/skill_assets/prereview-pipeline/: SKILL.md
src/prereview/skill_assets/prereview-pipeline/assets/: annotation-notes.template.json
src/prereview/templates/: review-input.txt.j2  review.html.j2
tests/: test_pipeline.py
