[project]
authors = [{name = "Anton Akhmerov", email = "anton.akhmerov@gmail.com"}]
dependencies = []
name = "prereview"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
prereview = "prereview.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/prereview"]

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]
preview = ["pixi-build"]

[tool.pixi.dependencies]
python = ">=3.11,<3.14"

[tool.pixi.pypi-dependencies]
prereview = { path = ".", editable = true }
pytest = ">=8.4.1,<9"

[tool.pixi.package]
name = "prereview"
version = "0.1.0"

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "*" }

[tool.pixi.package.host-dependencies]
hatchling = "*"

[tool.pixi.package.run-dependencies]
python = ">=3.11,<3.14"

[tool.pixi.tasks]
test = "pytest -q"
build-conda = "pixi build"
